[tool.poetry]
name = "min-hist-boost-pickle-error-example"
version = "0.1.0"
description = ""
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
sklearn = "^0.0.post12"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
